--- a/apps/nuxtjs/package.json
+++ b/apps/nuxtjs/package.json
@@ -1,16 +1,29 @@
 {
   "name": "@fem-aec/nuxtjs",
   "version": "1.0.0",
-  "description": "",
+  "description": "a Nuxt 3 project",
+  "author": "carlosalzate",
   "private": true,
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint --ext \".ts,.js,.vue\" --ignore-path .gitignore .",
+    "lintfix": "eslint --fix --ext \".ts,.js,.vue\" --ignore-path .gitignore ."
   },
   "devDependencies": {
-    "nuxt": "^3.0.0"
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
+    "@vue/eslint-config-standard": "^8.0.1",
+    "eslint": "^8.32.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-nuxt": "^4.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.9.0",
+    "nuxt": "^3.0.0",
+    "prettier": "^2.8.3",
+    "vite-plugin-eslint": "^1.8.1"
   }
 }
